2004-10-21  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-view-insert-fontified-text-content): Use
	dummy absolute path in buffer-file-name. (by Katsumi Yamaoka)
	Force fontify for jit-lock-mode.

2004-09-27  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (mime-edit-temp-message-buffer): Define.
	* mime-play.el (mime-view-temp-message-buffer): Ditto.
	(mime-preview-quitting-method-for-mime-show-message-mode): Change
	accordingly.

2004-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README.en (CVS based development): Mention anonymous CVS access;
	remove the description about developers' pserver access.

2003-11-15  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-scheme-lookup-key): Use regexp match instead of
	split-string (split-string is different between emacs 21.2 and
	21.4).  Reported by ultrasoul@ultrasoul.com (David D. Smith).

2004-09-15  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-preview-follow-current-entity): Avoid error
	on null entity.
	(mime-preview-find-boundary-info): Ditto.
	Avoid error at the beginning of buffer.

2004-08-29  Yoichi NAKAYAMA  <yoichi@geiin.org>

	Merge following changes from semi-1_14 branch:

	* pgg-gpg.el (pgg-gpg-process-region): Use `make-temp-file' instead of
	`make-temp-name'.
	Add --yes option to overwrite existing output file;
	Remove needless set-default-file-modes.
	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.
	(pgg-scheme-verify-region): Ditto.
	(pgg-scheme-snarf-keys-region): Ditto.
	* pgg-pgp.el (pgg-pgp-process-region): Ditto.
	(pgg-scheme-verify-region): Ditto.
	(pgg-scheme-snarf-keys-region): Ditto.
	* mime-pgp.el (mime-verify-application/pgp-signature): Ditto.
	* mime-play.el (mime-activate-mailcap-method): Make a temporary
	directory of a temporary file for the mailcap application.
	(mime-mailcap-method-sentinel): Follow the change above.
	(mime-require-safe-directory): New function.
	(mime-store-message/partial-piece): Use it.